# WingArc1st-Hackathon-server

./: .gitignore  README.md  pyproject.toml
src/: app.py  create_card.py  gacha.py  utils.py
src/lib/: card.py  gacha.py  playercard.py  scrap.py
src/templates/: create.html  gacha.html  menu.html
