[tool.poetry]
name = "wingarc1st-hackathon-server"
version = "0.1.0"
description = ""
authors = ["Furuta Naoki <fn.nk.2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
easyocr = "^1.7.1"
opencv-python = "^4.10.0.84"
flask = "^3.0.3"
requests = "^2.32.3"
bs4 = "^0.0.2"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
